# continuum

./: .gitignore  BOUNDARY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  RELEASING.md  SECURITY.md  continuum-openapi.actions.json  continuum-openapi.json  openapi.raw.json  patch_actions_openapi.py  pyproject.toml  render.yaml
.githooks/: commit-msg
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish-cli.yml  publish-mcp.yml  publish-sdk.yml  release-npm.yml  release-pypi.yml  release.yml
core/: LICENSE  README.md  pyproject.toml
core/src/continuum_engine/: __init__.py  config.py
core/src/continuum_engine/compiler/: decision_compiler.py
core/src/continuum_engine/enforcement/: policies.py
core/src/continuum_engine/llm/: client.py  prompts.py
core/src/continuum_engine/resolution/: context_resolver.py  intent_resolver.py
core/src/continuum_engine/scorers/: ambiguity.py  risk.py
core/tests/: conftest.py  test_ambiguity_scorer.py  test_decision_compiler.py  test_intent_resolver.py  test_policies.py  test_risk_scorer.py
demo/: Dockerfile.api  Dockerfile.ui  README.md  docker-compose.yml  seed.py
demo/api/: README.md  main.py  pyproject.toml
demo/api/auth/: __init__.py  middleware.py
demo/api/db/: __init__.py  schema.py
demo/api/db/migrations/: 001_init.sql  002_add_binding_key.sql
demo/api/storage/: base.py  local.py  postgres.py
demo/ui/: README.md  package-lock.json
docs/: README.md  docs.json  index.mdx  openapi.yaml
docs/api-reference/: overview.mdx
docs/concepts/: clarification-protocol.mdx  conflict-resolution.mdx  decision-contracts.mdx  mining.mdx  scope-precedence.mdx
docs/cookbooks/: flagship-same-prompt.mdx  langgraph-agent.mdx  multi-agent-code.mdx  no-history-demo.mdx  plan-mode-complement.mdx  sqlite-memory.mdx
docs/for-code/: ambiguity-gate.mdx  inspector-diffs.mdx  quickstart.mdx  rejections.mdx
docs/integrations/: bring-your-memory.mdx  langgraph.mdx  llamaindex.mdx  mcp.mdx
docs/open-source/: install.mdx  local-mode.mdx  overview.mdx
docs/release-notes/: changelog.mdx
docs/sdks/: python.mdx  typescript.mdx
examples/_shared/: semantics.yaml
examples/agent_workflow/: README.md  app.py
examples/e2e-smoke/: test_clarification_flow.py  test_conflict_resolution.py  test_mine_commit_inspect.py
examples/flagship-demo/: flagship_demo.py
examples/semantic-models/: finance.yaml  marketing.yaml
examples/slack-bot/: README.md  app.py  handlers.py
examples/slack_copilot/: README.md  app.py
notebooks/: continuum_quickstart.ipynb
oss/capabilities/: README.md  continuum.example.yaml  pyproject.toml
oss/capabilities/src/continuum_capabilities/: __init__.py  adapters.py  loader.py  registry.py
oss/cli/: README.md  pyproject.toml
oss/cli/src/continuum_cli/: main.py
oss/cli/tests/: test_cli.py
oss/contracts/: MIGRATION-v0.2.md  README.md  SPEC.md
oss/contracts/tests/: conftest.py  (+1 more)
oss/docs/: README.md  architecture.md  getting-started.md  oss-boundary.md
oss/examples/: README.md
oss/integrations/: README.md
oss/integrations/langgraph/: README.md  nodes.py  pyproject.toml
oss/integrations/langgraph/examples/: working_example.py
oss/integrations/langgraph/src/continuum_langgraph/: __init__.py  nodes.py
oss/integrations/llamaindex/: README.md  adapter.py  pyproject.toml
oss/integrations/llamaindex/examples/: working_example.py
oss/integrations/llamaindex/src/continuum_llamaindex/: __init__.py  tool_spec.py
oss/integrations/llamaindex/tests/: test_tool_spec.py
oss/mcp-server/: README.md  pyproject.toml
oss/mcp-server/examples/: smoke_test.py
oss/mcp-server/src/continuum_mcp/: http_backend.py  server.py
oss/mcp-server/tests/: test_mcp_e2e.py
oss/miner/: __init__.py
oss/policy/: __init__.py  commit_policy.py
oss/precedence/: __init__.py
oss/sdk-ts/: README.md  package.json  tsconfig.json
oss/sdk/python/: README.md  pyproject.toml
oss/sdk/python/src/continuum/: __init__.py  client.py  exceptions.py  hooks.py  lifecycle.py  memory.py  memory_sqlite.py  models.py  schema.py  scope.py
oss/sdk/python/src/continuum/enforce/: __init__.py  engine.py  types.py
oss/sdk/python/src/continuum/resolve/: __init__.py  resolve.py  types.py
oss/sdk/python/tests/: conftest.py  test_client.py  test_lifecycle.py  test_memory_sqlite.py  test_models.py  test_regressions.py
oss/yaml/: __init__.py
scripts/: bump-version.sh  check-boundary.sh  install-githooks.sh
(+66 files in other folders)
