[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "continuum-demo-api"
version = "0.1.0"
description = "FastAPI wrapper for Continuum SDK (demo UI backend)"
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "continuum-sdk>=0.1.1",
]

