[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "continuum-cli"
version = "0.1.0"
description = "CLI inspector for the Continuum decision-tracking framework"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "continuum-sdk>=0.1.0",
    "typer>=0.9",
]

[project.scripts]
continuum = "continuum_cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]
