[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "continuum-mcp-server"
version = "0.1.2"
description = "MCP server exposing Continuum decision tools"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "continuum-sdk>=0.1.1",
    "mcp>=1.0",
]

[project.scripts]
continuum-mcp = "continuum_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]
