[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "continuum-sdk"
version = "0.1.0"
description = "Python SDK for the Continuum decision-tracking framework"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "pydantic>=2.0,<3",
    "jsonschema>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "ruff",
    "mypy",
    "types-jsonschema",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
import_mode = "importlib"
